# la-master

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
apps/account/: __init__.py  admin.py  apps.py  models.py  signals.py  task.py  utils.py
apps/account/api/: urls.py
apps/account/migrations/: 0001_initial.py  0002_profile_alma_mater_profile_expertise_and_more.py  0003_notification.py  0004_account_subscription_status_delete_notification.py  0005_alter_account_subscription_status.py  0006_account_last_subscription_payment_date.py  0007_profile_adopted_actor_profile_date_and_more.py  0008_remove_profile_adopted_actor_remove_profile_date_and_more.py  0009_alter_profile_account.py  0010_profile_description_profile_real_name.py  0011_alter_profile_description.py  0014_lawyercase.py  (+51 more)
apps/billing/: __init__.py  admin.py  apps.py  models.py  tasks.py  utils.py
apps/data/: admin.py  apps.py  models.py
apps/favorites/: apps.py  models.py
apps/notification/: apps.py  models.py
apps/search/: apps.py
apps/service/: __init__.py  admin.py  apps.py  models.py
apps/support/: admin.py  apps.py  models.py
apps/utils/: authenticate.py  exception.py  get_client_ip.py  middleware.py  models.py  pagination.py
data/: account.json  auth.groups.json
deploy/docker/: .env.example  Dockerfile-dev  docker-compose.yml  entrypoint.sh
deploy/nginx/: default  docs.legal-data.tech.conf  docs.legal-data.tech.conf.backup  index.html  la  la.backup  rocket.chat.legal-data.tech.conf
deploy/systemd/: celery.conf  celery.service  celerybeat.service  gunicorn.socket  la.service
la/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+69 files in other folders)
